# Plannercord-Bot

./: .gitignore  LICENSE  README.md  db_func.py  main.py  main_pycord.py  pyproject.toml
cogs/: commands_cog.py
