[tool.poetry]
name = "plannercord-bot"
version = "0.1.0"
description = ""
authors = ["blueemma <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.6.7"
typing-extensions = "^4.1.1"
"discord.py" = "^1.7.3"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
