[tool.poetry]
name = "plannercord-bot"
version = "0.1.0"
description = ""
authors = ["blueemma <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.0.1"
dnspython = "^2.2.0"
"discord.py" = "^1.7.3"
python-decouple = "^3.6"
emoji = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
